cmake_minimum_required(VERSION 3.27)
project(Advanced_CPP)

set(CMAKE_CXX_STANDARD 23)

add_executable(hello_world HelloWorld.cpp)
add_executable(int_vector_2d IntVector2d.cpp)
add_executable(generic_vector_print GenericVectorPrint.cpp)
add_executable(func_pointers FuncPointers.cpp)
add_executable(copy_const_assign CopyConstructor_CopyAssignment.cpp)
add_executable(celcius_fahrenheit Celcius_Fahrenheit.cpp)
add_executable(app app.cpp)
add_executable(fibonacci Fibonacci.cpp)
add_executable(generic_programming GenericProgramming.cpp)
add_executable(int_vector_3d IntVector3d.cpp)
add_executable(left_and_right_values Left_and_right_values.cpp)
add_executable(pointers_and_constness Pointers_and_constness.cpp)
