cmake_minimum_required(VERSION 3.27)
project(Advanced_CPP)

set(CMAKE_CXX_STANDARD 23)

add_executable(hello_world HelloWorld.cpp)
add_executable(int_vector_2d IntVector2d.cpp)
add_executable(generic_vector_print GenericVectorPrint.cpp)
add_executable(func_pointers FuncPointers.cpp)
add_executable(copy_const_assign CopyConstructor_CopyAssignment.cpp)
add_executable(celcius_fahrenheit Celcius_Fahrenheit.cpp)
add_executable(app app.cpp)
add_executable(fibonacci Fibonacci.cpp)
add_executable(generic_programming GenericProgramming.cpp)
add_executable(int_vector_3d IntVector3d.cpp)
add_executable(left_and_right_values Left_and_right_values.cpp)
add_executable(pointers_and_constness Pointers_and_constness.cpp)
add_executable(inheritance_and_dynamic_polymorphism Inheritance_and_dynamic_polymorphism.cpp)
add_executable(operator_overloading Operator_overloading.cpp)
add_executable(reference_collapsing Reference_collapsing.cpp)
add_executable(generic_container Generic_container.cpp)
add_executable(template_parameter_types Template_parameter_types.cpp)
add_executable(generic_addition Generic_addition.cpp)
add_executable(pair_tuple_map Pair_Tuple_Map.cpp)